--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -29,3 +25,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/.env
+
+/vendor/bundle
+
+# rubymine使う人用
+.idea/
